--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
           uses: docker/build-push-action@v2 
           with:
             push: true
-            tags: ilyanazyrov/infra_actions:latest
+            tags: ilyanazyrov/infra_actions
 
   deploy:
       runs-on: ubuntu-latest
