--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,8 +54,8 @@ jobs:
           # Запуск скрипта авторизации на Docker Hub
           uses: docker/login-action@v1 
           with:
-            username: ilyanazyrov # ${{ secrets.DOCKER_USERNAME }} 
-            password: 6504879903 # ${{ secrets.DOCKER_PASSWORD }}
+            username: ${{ secrets.DOCKER_USERNAME }} 
+            password: ${{ secrets.DOCKER_PASSWORD }}
         - name: Push to Docker Hub
           # Пуш образа в Docker Hub 
           uses: docker/build-push-action@v2 
